Fix minor css container overflow issues Modify colors

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -13,6 +13,10 @@ h1 {
   color: tomato;
 }
 
+a {
+  text-decoration:none;
+}
+
 .chatbar {
   background: $nav-footer-color;
   border-top: 1px solid black;
@@ -60,6 +64,7 @@ h1 {
   min-height:100vh;
   min-width:175px;
   width:20vw;
+  border-right:1px solid #aaaaaa;
 }
 
 .usernames-container{
@@ -70,6 +75,8 @@ h1 {
   border:#bbbbbb 1px solid;
   border-radius:0.2rem;
   width:14vw;
+  min-width:130px;
+  overflow:hidden;
 
   div{
     text-align:center;
@@ -77,7 +84,7 @@ h1 {
 
   .online-heading{
     font-weight:bold;
-    background:red;
+    background:$sidebar-header-color;
     color:white;
     padding:0.4rem 0;
     font-size:1rem;
@@ -87,8 +94,6 @@ h1 {
     margin:0.5rem 0.3rem;
   }
 }
-
-
 
 .messages{
   flex-grow:1;
@@ -137,8 +142,6 @@ h1 {
   padding-top:0.5rem;
 }
 
-
-
 .message.system {
   font-style: italic;
   padding: 5px 20px;
@@ -165,19 +168,17 @@ h1 {
 .navbar-brand {
   font-family: $title-font;
   color:$title-color;
-  display: block;
-  float: left;
   font-weight: 700;
-  font-size: 2.9rem;
+  font-size: 3.2rem;
   height: $nav-height;
   line-height: $nav-height;
   padding: 0 10px;
-  text-decoration: none;
+  text-shadow: -3px 3px black;
 }
 
 .navbar {
   background: $nav-footer-color;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid $nav-border-color;
   height: $nav-height;
   left: 0;
   padding: 0 10px;
@@ -195,8 +196,10 @@ h1 {
   position:absolute;
   right:1rem;
   font-size:1rem;
+  color:white;
+  text-shadow: -0.05rem 0.05rem black;
 }
 
 .chat-img{
-  max-width:60vw;
+  max-width:45vw;
 }
