--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,5 +1,7 @@
-$nav-footer-color:#0900ff;
-$sidebar-color:#eeeeee;
-$title-font:Helvetica;
-$title-color:black;
+$nav-footer-color:linear-gradient(to bottom, #0078c1, #66aed9);
+$nav-border-color:#0078c1;
+$sidebar-color:#eeebe8;
+$sidebar-header-color:#cb091c;
+$title-font:Poppins, Helvetica;
+$title-color:white;
 $nav-height:80px;
